assets/css/style.scss
---
---

@import "{{ site.theme }}";
@font-face {
	  font-family: carolingia;
	    src: url({{ site.baseurl }}/assets/font/carolingia.ttf);
    }
body {
	padding: 0;
	margin: 90px 0 0 0;
  	color: #493c33;
  	background-color: black;
	background-size: 1080px;
	background-image: url("{{ site.baseurl }}/assets/img/book.png");
	background-attachment: fixed;
	background-repeat: no-repeat;
  	background-position: center 40px;
}
header {
	margin: 0px;
	padding: 0px;
	width: 400px;
	height: 460px;
	}
section {
	margin: 0px;
  	padding: 0px;
	width: 400px;
	height: 460px;
	}
section h1 {
      border-bottom: 2px solid black;
	text-align: right;
	}
.scrolltop {
	position: relative;
  	top: 150px;
	width: 500px;
	height: 127px;
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
  	background-position: center bottom;
    	background-size: 500px 127px;
      	background-repeat: no-repeat;
}
.scrollmid {
	border: 1px solid transparent;
  	position: relative;
	top: -40px;
	width: 500px;
	height: auto;
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
  	background-position: center;
    	background-size: 500px auto;
      	background-repeat: repeat-y;
}
.scrollbot {
	border: 1px solid transparent;
	position: relative;
	top: -2px;
	width: 500px;
	height: 143px;	
	margin: 0px;
	padding: 0px;
	background-origin: content-box, padding-box;
	background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
  	background-position: center top;
    	background-size: 500px 143px;
      	background-repeat: no-repeat;
}
h1, h2, h3, h4, h5, h6 {
	color: #543E36;
	text-transform: capitalize;
	font-family: Carolingia, "Eagle Lake", "Brush Script MT", cursive;  
	margin: 20px;
    }
 p, ul, ol {
	color: #493C33;
	font-family: cursive;  
	margin: 20px;
}
.content {
	width: auto;
	height: 440px;
	margin: 20px;
	padding: 0px;
	-webkit-mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	mask-image: linear-gradient(to bottom, transparent 0%, black 10%, black 90%, transparent 100%);
	overflow-y: scroll;
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	scrollbar-width: none;  /* Firefox, Safari 18.2+, Chromium 121+ */
	}

.content::-webkit-scrollbar { 
    display: none;  /* Older Safari and Chromium */
	}
.menu {
	width: auto;
	height: 440px;
	margin: 20px;
	padding: 0px;
	overflow: hidden;
	}
.indent {
	margin-left: 50px;
	}
.title {
	display: block;
	margin-left: auto;
	margin-right: auto;
	width: 240px;
	}
.wrapper {
	margin-top: 0px;
	}
.box {
	margin: 5px 20px;
	opacity: 0.6;
	background: #e6e6e6;
	border: 4px solid #493c33;
 	border-radius: 25px;
}
.byline {
  	text-align: right; 
}
.entry {
	opacity: 0.6;
	border: 4px solid #493c33;
  	border-radius: 25px;
  	margin: 5px 20px;
  	background-color: #e6e6e6;
	}
.boilerplate {
	background: black;
	color: white;
	font-family: serif;
	margin: 0px 5px;
	padding: 0px;
  	font-size: x-small;
	}
.update {
	position: absolute; float: right;}
footer {
	width: auto;
	float: inherit;
  	position: fixed;
	bottom: 0px;
  }
@media print, screen and (max-width: 1080px) {
	body {
		margin: 0;
		background-size: 95%;
		background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
		background-repeat: no-repeat;
	  	background-position: center;
		background-attachment: scroll;
		}
	header {
		float: none;
		margin: 50px 0 0 0;
		padding: 0px;
		top: 50px;
		width: auto;
		height: auto;
		border: none;
		background-size: 95%;
		background-image: none;
		background-repeat: repeat-y;
	  	background-position: center;
		background-attachment: scroll;
		}
	.title {
		margin-top: 40px;
		}
	.wrapper {
		top: 0px;
		position: absolute;
		background-size: 95%;
		background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
		background-repeat: repeat-y;
	  	background-position: center top;
		background-attachment: scroll;
		z-index: 10;
		border: none;
		}
	section {
		position: relative;
		margin: 0;
		float: none;
	  	padding: 0 0 50px 0;
		top: 50px;
		width: auto;
		height: auto;
		border: none;
		z-index: 1;
		}
	.content {
		position: static;
		z-index: 1;
		width: auto;
		height: auto;
		top: auto;
		margin: 5px 30px 50px 30px;
		padding: 0px;
	-webkit-mask-image: none;
	mask-image: none;
	overflow-y: scroll;
	-ms-overflow-style: none;  /* Internet Explorer 10+ */
	scrollbar-width: none;  /* Firefox, Safari 18.2+, Chromium 121+ */
		}
	.menu {
		width: auto;
		height: auto;
		top: auto;
		margin: 5px 30px;
		padding: 0px;
		border: none;
		}
	.menu h4 {
    		white-space: nowrap;
    		overflow: visible;
		}
	footer {
		position: static;
		margin: 0;
		padding: 0;
		bottom: 5px;
		border: none;
		background-size: 95%;
		background-image: url("{{ site.baseurl }}/assets/img/largescrollbottom.png");
		background-repeat: no-repeat;
	  	background-position: center bottom;
		z-index: 5;
		}
	}

